# Vehicle-Price-Prediction-

./: .gitignore  Dockerfile  EVALUATION_README.md  README.md  SETUP_COMPLETE.md  debug_preprocessors.py  docker-compose.yml  index.html  main.py  prometheus.yml  pyproject.toml  test_notebook.py  test_prediction.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: config.yaml  logging.yaml
src/: __init__.py
src/api/: endpoints.py
src/data/: preprocessing.py
src/mlops/: model_explainer.py
src/models/: ensemble.py
src/monitoring/: metrics.py
src/utils/: config.py
